# RegEngine

./: .dockerignore  .editorconfig  .env.example  .env.production  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  .semgrepignore  404_FIX_SUMMARY.md  AGENTS.md  ARCHITECTURE.md  ASYNC_PROCESSES.md  AUTHENTICATION.md  BIZ_DOCS_MIGRATION.md  CANONICAL_OWNERSHIP.md  CHANGELOG.md  CI-KNOWN-ISSUES.md  COMMERCIALIZATION_SUMMARY.md  COMPREHENSIVE_AUDIT_2026_03_09.md  CONTRIBUTING.md  CURRENT_SYSTEM_MAP.md  DB_FIRST_PATTERN_GUIDE.md  DEAD_CODE_REPORT.md  DEBUG_SCAN_QUICK_SUMMARY.txt  DELIVERABLES_SUMMARY.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  Dockerfile  FOUNDER_KNOWLEDGE.md  FRONTEND_AUDIT_REPORT.txt  FSMA-204-RegEngine-Market-Response.md  IMMEDIATE_NEXT_STEPS_COMPLETED.md  IMPLEMENTATION_CHECKLIST.md  INTERNAL_TOOLS_AUDIT.json  INTERNAL_TOOLS_AUDIT_SUMMARY.md  LICENSE  (+58 more)
.agent/: CONSTITUTION.md
.agents/: README.md
.audit/: hollow_features_remediation_feb_2_2026.md
.claude/: launch.json  settings.json
.gemini/: MCP_SETUP.md
.github/: CODEOWNERS  copilot-instructions.md  copilot-review.yml  dependabot.yml  labeler.yml  pull_request_template.md
.semgrep/: tenant-trust.yaml
.swarm_memory/: CIResilienceAgent.jsonl  CoderAgent.jsonl  PlannerAgent.jsonl  ReviewerAgent.jsonl  TesterAgent.jsonl
_dead_code/: init-entertainment-db.sh  save_the_universe_expense_log.csv
alembic/: README  env.py
app/: main.py
audit/: api-endpoints.md  frontend-routes.md  link-map.md  overnight-report.md
cli/: regengine.py  requirements.txt
demo/: README.md
demo_exports/: fsma_recall_SV-20240115-001_20260208_170010.csv
docs/: ADR-001-security-hardening-architecture.md  AGENTS.md  AI_ENGINEERING_STANDARDS.md  API_VERSIONING.md  ARCHITECTURE.md  AUDIT_EVENTS.md  Authentication.md  BETA_TESTER_GUIDE.md  BUGHUNT_RESULTS.md  CANONICAL_MODEL.md  CANONICAL_MODEL_SPEC.md  CODEBASE_ISSUES.md  CODE_REVIEW_FINDINGS.md  COMPETITIVE_BENCHMARK.md  COMPETITIVE_LANDSCAPE_RESEARCH_2026-03-28.md  COMPREHENSIVE_CODEBASE_REVIEW_v2_2026-03-27.md  CONTENT_INGESTION.md  DATABASE_TOPOLOGY.md  DATA_MODEL.md  DATA_PROCESSING_AGREEMENT.md  DATA_ROOM_INDEX.md  DEBUG_REPORT_ALL_FEATURES_2026-03-27.md  DEPLOYMENT.md  DEPLOY_CHECKLIST_SECURITY_HARDENING.md  DISASTER_RECOVERY.md  ENGINEERING_HANDOFF.md  ENV_SETUP_CHECKLIST.md  EXECUTION_PLAN.md  FRONTEND_LINE_BY_LINE_ANALYSIS.md  FRONTEND_USABILITY_ANALYSIS.md  FSMA_RAILWAY_DEPLOYMENT.md  GOLDEN_PATH.md  INVESTOR_DEMO_GUIDE.md  LOCAL_SETUP_GUIDE.md  MIGRATION_CONSOLIDATION.md  MULTI_INDUSTRY_EXPANSION.md  NFR_REQUIREMENTS.md  OPERATIONS.md  PCOS_API_REFERENCE.md  PCOS_DECOMPOSITION_PLAN.md  (+25 more)
frontend/: .dockerignore  .env.example  .env.local  .env.test.example  .eslintrc.json  .gitignore  Dockerfile  PAGE_AUDIT.md  README.md  build_log.txt  build_output.txt  build_v2_log.txt  capacitor.config.ts  eslint.config.mjs  fix_header_verticals.py  next.config.js  package-lock.json  package.json  playwright.config.ts  playwright.demo-smoke.config.ts  sentry.client.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.mts  vitest.config.ts
gateway/: nginx.conf
infra/: bootstrap.sh  otel-collector-config.yaml
kernel/: __init__.py  discovery.py  graph.py  graph_traceability.py  models.py  parser.py
launch_orchestrator/: .env.example  00_README_LAUNCH_ORCHESTRATOR.md  DEPLOYMENT_READINESS.md  README.md  launch_orchestrator_spec.yaml  orchestrator.py
migrations/: CONSOLIDATION_PLAN.md  V002__fsma_cte_persistence.sql  V040__obligation_cte_rules_rls_doc.sql  V041__tenant_obligation_seeding_function.sql  V043__canonical_traceability_events.sql  V044__versioned_rules_engine.sql  V045__exception_remediation_queue.sql  V046__request_response_workflow.sql  V047__identity_resolution.sql  V048__rls_sysadmin_defense_in_depth.sql  V049__rls_obligations_and_ftl.sql  V049__transformation_links_adjacency.sql  V050__rls_reference_tables.sql  V051__developer_portal_schema_doc.sql  V052__cte_events_composite_idempotency_key.sql  V052__ensure_tenant_tables.sql  V053__add_growing_cte_type.sql  V054__rls_variable_standardization.sql  V057__ftl_cottage_cheese_exemption.sql  assessment_submissions.sql  finance_graph_schema.cypher  finance_snapshots_dual_storage.sql  fts_index.cypher  rls_fix_namespace.sql  rls_migration_v1.sql
nfr/: fsma_slos.yaml
patches/: 0001-chore-remove-investor-demo-flow-and-all-related-file.patch  0001-docs-update-README-to-reflect-current-shipped-state.patch  0001-feat-wire-6-remaining-dashboard-pages-to-real-backen.patch  0001-feat-wire-supplier-dashboard-trace-page-to-real-admi.patch
production_bundle/: README.md
qa/: README.md  ai-analysis.js  bad-data.js  baseline-summary.json  decision.js  drift-check.js  export-validate.js  fsma-lite-check.js  full-flow.js  regression.js  summary.js  tenant-test.js
recall_drill/: __init__.py  __main__.py  cli.py  pipeline.py
regengine/: CHANGELOG.md  README.md  __init__.py  client.py  exceptions.py  label_api.py  labels.py  models.py  setup.py  verify_chain.py
runbooks/: deploy-security-hardening.md  incident-response.md  monitoring-alerts.md  neo4j-disaster-recovery.md  rollback-procedure.md  scaling-guide.md
sales/: README.md  design_partner_demo_script.md  design_partner_feedback_scorecard.md  design_partner_outreach_messages_2026-03-10.md  design_partner_outreach_tracker_template.csv  fsma_cold_outreach_templates.md  fsma_investor_brief.md  fsma_supplier_onepager.md
sales_enablement/: README.md  fsma_204_sales_enablement_kit_v1.1.md
sample_data/: 01_harvesting.csv  02_cooling.csv  03_initial_packing.csv  04_shipping.csv  05_receiving.csv  06_transformation.csv  README.md
schemas/: fsma_event.avsc  fsma_trace_event.avsc  (+1 more)
sdk/python/: README.md  pyproject.toml  requirements-test.txt  requirements.txt
sdk/python/examples/: README.md  demo.py
sdk/python/regengine_energy/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: conftest.py  integration_test.py  test_client.py
(+3279 files in other folders)
