[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto --import-mode=importlib"
testpaths = [
    "tests",
    "services/admin/tests",
    "services/aerospace/tests",
    "services/automotive/tests",
    "services/energy/tests",
    "services/graph/tests",
    "services/ingestion/tests",
    "services/nlp/tests",
    "services/compliance/tests",
    "services/opportunity/tests",
]
asyncio_mode = "auto"
