[tool.poetry]
name = "regengine"
version = "0.4.0"
description = "RegEngine: The Regulatory Intelligence Platform"
authors = ["RegEngine Engineering <admin@regengine.io>"]
readme = "README.md"
packages = [
    { include = "shared", from = "." },
    { include = "kernel", from = "." },
    { include = "plugins", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core Framework
fastapi = "~=0.109.0"
uvicorn = {extras = ["standard"], version = "~=0.27.0"}
pydantic = "~=2.6.0"
pydantic-settings = ">=2.1.0"
structlog = ">=24.1.0"
python-json-logger = ">=2.0.7"
python-dotenv = ">=1.0.0"
click = ">=8.1.0"
typer = ">=0.9.0"
PyYAML = ">=6.0.1"

# Database & Storage
sqlalchemy = "~=2.0.25"
psycopg = {extras = ["binary"], version = ">=3.1.17"}
asyncpg = "~=0.29.0"
redis = "~=5.0.1"
neo4j = "~=5.16.0"
minio = ">=7.2.3" # For S3-compatible object storage

# Cloud SDKs
boto3 = "~=1.34.0"

# Data Processing
pandas = "~=2.0.0"
numpy = "~=1.26.0"
python-dateutil = ">=2.8.2"

# Security & Auth
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["argon2"], version = ">=1.7.4"}
authlib = ">=1.3.0"
python-multipart = ">=0.0.9"

# Observability
prometheus-client = ">=0.19.0"
prometheus-fastapi-instrumentator = ">=7.0.0"
opentelemetry-api = ">=1.24.0"
opentelemetry-sdk = ">=1.24.0"
opentelemetry-exporter-otlp = ">=1.24.0"
opentelemetry-instrumentation-fastapi = ">=0.45b0"
sentry-sdk = "~=1.40.0"

# Networking
httpx = ">=0.26.0"
tenacity = ">=8.2.3"

# Messaging / Kafka
kafka-python = ">=2.0.2"
aiokafka = ">=0.10.0"

# NLP & ML
spacy = ">=3.7.2"
tiktoken = ">=0.5.2"
langchain = "~=0.1.0"
openai = "~=1.10.0"

# Scheduler
apscheduler = ">=3.10.4"

# Document Parsing
beautifulsoup4 = ">=4.12.0"
lxml = ">=5.1.0"
pdfminer-six = ">=20231228"
python-docx = ">=1.1.0"
openpyxl = ">=3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
httpx = ">=0.26.0"
black = ">=24.1.0"
isort = ">=5.13.0"
flake8 = ">=7.0.0"
mypy = ">=1.8.0"
pre-commit = ">=3.6.0"
requests = ">=2.31.0"  # scripts and tests only; production code uses httpx
testcontainers = {extras = ["neo4j", "postgresql", "redis"], version = ">=3.7.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
    "kernel/obligation/tests",
    "kernel/monitoring/tests",
    "kernel/evidence/tests",
    "services/admin/tests",
    "services/graph/tests",
    "services/ingestion/tests",
    "services/nlp/tests",
    "services/scheduler/tests",
]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
