[tool.poetry]
name = "regengine"
version = "0.4.0"
description = "RegEngine: The Regulatory Intelligence Platform"
authors = ["RegEngine Engineering <admin@regengine.io>"]
readme = "README.md"
packages = [
    { include = "shared", from = "services" },
    { include = "kernel", from = "." },
    { include = "plugins", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core Framework
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
pydantic = ">=2.10.0,<3"
pydantic-settings = ">=2.7.0"
structlog = ">=24.1.0"
python-json-logger = ">=2.0.7"
python-dotenv = ">=1.0.0"
click = ">=8.1.0"
typer = ">=0.9.0"
PyYAML = ">=6.0.1"
gunicorn = ">=22.0.0"

# Database & Storage
alembic = ">=1.13.0"
sqlalchemy = ">=2.0.25"
psycopg = {extras = ["binary"], version = ">=3.2.4"}
psycopg2-binary = ">=2.9.0"
asyncpg = ">=0.29.0"
redis = ">=5.0.1"
neo4j = ">=5.16.0"

# Cloud SDKs & External Services
boto3 = ">=1.34.0"
supabase = ">=2.3.0"
gotrue = ">=2.4.1,<3"
resend = ">=2.4.0,<3"
stripe = ">=11.6.0,<16"

# Data Processing
pandas = ">=2.0.0"
numpy = ">=1.26.0"
scipy = ">=1.12.0"
python-dateutil = ">=2.8.2"
openpyxl = ">=3.1.0"
xlrd = ">=2.0.0"

# Security & Auth
PyJWT = ">=2.8.0"
passlib = {extras = ["argon2"], version = ">=1.7.4"}
argon2-cffi = ">=23.1.0"
pyotp = ">=2.9.0"
authlib = ">=1.6.6"
python-multipart = ">=0.0.9"
defusedxml = ">=0.7.1"

# Observability — all 4 otel packages must share the same version
prometheus-client = ">=0.19.0"
prometheus-fastapi-instrumentator = ">=7.0.0"
opentelemetry-api = "==1.41.0"
opentelemetry-sdk = "==1.41.0"
opentelemetry-exporter-otlp = "==1.41.0"
opentelemetry-instrumentation-fastapi = "==0.62b0"
sentry-sdk = ">=1.40.0"

# Networking
httpx = {extras = ["http2"], version = ">=0.26.0"}
tenacity = ">=8.2.3"
slowapi = ">=0.1.9"
feedparser = ">=6.0.0"
email-validator = ">=2.0.0"

# Messaging / Kafka
confluent-kafka = {extras = ["schema-registry", "avro"], version = ">=2.3.0"}
fastavro = ">=1.9.0"
cachetools = ">=5.3.0"
attrs = ">=23.1.0"

# NLP & ML
spacy = ">=3.7.2"
regex = ">=2024.0.0"
tiktoken = ">=0.5.2"
langchain = ">=0.1.0"
langchain-core = ">=1.2.22,<2.0.0"
langchain-community = ">=0.4.0"
langchain-text-splitters = ">=1.1.0"
langchain-groq = ">=1.1.0"
openai = ">=1.10.0"
jsonschema = ">=4.20.0"

# Scheduler
apscheduler = ">=3.10.4"

# Document Parsing
beautifulsoup4 = ">=4.12.0"
lxml = ">=5.1.0"
pdfminer-six = ">=20231228"
pdfplumber = ">=0.10.0"
pypdf = ">=6.9.2,<7"
fpdf2 = ">=2.8.0,<3"
python-docx = ">=0.8.11"
docx2txt = ">=0.8"
pytesseract = ">=0.3.10"
pdf2image = ">=1.16.0"
Pillow = ">=12.1.1,<13"
pyzbar = ">=0.1.9,<1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
pytest-xdist = ">=3.6.0"
black = ">=24.1.0"
isort = ">=5.13.0"
flake8 = ">=7.0.0"
mypy = ">=1.8.0"
pre-commit = ">=3.6.0"
requests = ">=2.31.0"  # scripts and tests only; production code uses httpx
testcontainers = {extras = ["neo4j", "postgres", "redis"], version = ">=4.4.0"}
jinja2 = ">=3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto --import-mode=importlib"
# Only the repo root + services package dir are globally on pythonpath.
# Per-service ``app/`` resolution is handled by the root conftest.py hook
# which switches sys.path to the active service before each test collector
# runs. Listing multiple ``services/<svc>`` here would cause ``app`` to
# permanently resolve against whichever service sorted first.
pythonpath = [".", "services"]
testpaths = [
    "tests",
    "kernel/obligation/tests",
    "kernel/monitoring/tests",
    "kernel/evidence/tests",
    "services/admin/tests",
    "services/graph/tests",
    "services/ingestion/tests",
    "services/nlp/tests",
    "services/scheduler/tests",
]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
